--- a/compose.yaml
+++ b/compose.yaml
@@ -1,25 +1,25 @@
 services:
   postgres:
-    image: 'postgres:16'
+    image: "postgres:16"
     environment:
-      - 'POSTGRES_DB=vuelify_db'
-      - 'POSTGRES_PASSWORD=secret'
-      - 'POSTGRES_USER=user'
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_USER=${DB_USER}
     ports:
-      - '5432'
+      - "5432"
+    env_file:
+      - .env
 
-
-      
-kafka:
-    image: 'confluentinc/cp-kafka:latest'
+  kafka:
+    image: "confluentinc/cp-kafka:latest"
     environment:
-      - 'KAFKA_PROCESS_ROLES=broker,controller'
-      - 'KAFKA_NODE_ID=1'
-      - 'KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka:29093'
-      - 'KAFKA_LISTENERS=PLAINTEXT://kafka:9092,CONTROLLER://kafka:29093'
-      - 'KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092'
-      - 'KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT'
-      - 'KAFKA_CONTROLLER_LISTENER_NAMES=CONTROLLER'
-      - 'KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1'
+      - "KAFKA_PROCESS_ROLES=broker,controller"
+      - "KAFKA_NODE_ID=1"
+      - "KAFKA_CONTROLLER_QUORUM_VOTERS=1@kafka:29093"
+      - "KAFKA_LISTENERS=PLAINTEXT://kafka:9092,CONTROLLER://kafka:29093"
+      - "KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092"
+      - "KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
+      - "KAFKA_CONTROLLER_LISTENER_NAMES=CONTROLLER"
+      - "KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1"
     ports:
-      - '9092:9092'
+      - "9092:9092"
