--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=vuelify-api
 
 # Para ver las consultas SQL en la consola (útil para aprender)
 spring.jpa.show-sql=true
+spring.threads.virtual.enabled=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
