Implement Flight registration endpoint and add security configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,33 @@
+# --- APP NAME ---
 spring.application.name=vuelify-api
 
-# Para ver las consultas SQL en la consola (útil para aprender)
-spring.jpa.show-sql=true
-spring.threads.virtual.enabled=true
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+# --- DATABASE & SQL ---
+# P6Spy: Wrapper driver to log full queries and execution times
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+
+# --- HIBERNATE / JPA ---
+# Print SQL to console
+spring.jpa.show-sql=true
+# Pretty print SQL (readable format)
+spring.jpa.properties.hibernate.format_sql=true
+
+# --- LOGGING ---
+# Log SQL statements
+logging.level.org.hibernate.SQL=debug
+# Log query parameters/values
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
+# --- PERFORMANCE ---
+# Enable Virtual Threads (Java 21+)
+spring.threads.virtual.enabled=true
+
+# --- SECURITY ---
+# Read credentials from environment variables
+spring.security.user.name=${API_USER}
+spring.security.user.password=${API_PASSWORD}
+
+# --- ERROR RESPONSES ---
+# Show error message in JSON response
+spring.web.error.include-message=always
+# Show validation errors in JSON response
+spring.web.error.include-binding-errors=always
