--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,8 @@ spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 spring.jpa.show-sql=true
 # Pretty print SQL (readable format)
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # --- LOGGING ---
 # Log SQL statements
