--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 # Print SQL to console
 spring.jpa.show-sql=true
 # Pretty print SQL (readable format)
+# !Change this when for optimizing querys in P6Spy
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
